# dogfight

./: Displaylists.h  GenePool.cpp  GenePool.h  Gun.cpp  Gun.h  Info.plist  MyVector.cpp  MyVector.h  NeuralNet.cpp  NeuralNet.h  Neuron.cpp  Neuron.h  NeuronLayer.cpp  NeuronLayer.h  Plane.cpp  Plane.h  Quaternion.cpp  Quaternion.h  README.md  dogfight  gunflare.tga  land.tga  landtexture.tga  main.cpp  makefile  par.ini  point.cpp  point.h  prop.tga  sky2.tga  sky3.tga  sky5.tga  sky6.tga
python/: .gitignore  README.md  install.sh  pyproject.toml
python/assets/: convert_mesh.py  plane_mesh.npz
python/assets/textures/: cloud.tga  sky.tga
python/config/: default.yaml
python/dogfight/: __init__.py  config.py  main.py
python/dogfight/brain/: __init__.py  factory.py  layer.py  network.py  neuron.py  recurrent.py
python/dogfight/io/: __init__.py  metrics.py  population.py
python/dogfight/mathlib/: __init__.py  quaternion.py  vector3.py
python/dogfight/render/: __init__.py  app.py  camera.py  environment.py  gun_renderer.py  mesh.py  plane_renderer.py  textures.py
python/dogfight/sim/: __init__.py  actions.py  batch.py  behavior.py  combat.py  curriculum.py  fitness.py  gene_pool.py  gun.py  plane.py  selection.py  sensors.py  target.py
python/tests/: test_gene_pool.py  test_golden.py  test_network.py  test_plane_physics.py  test_population_io.py  test_quaternion.py  test_upgrades.py  test_vector3.py
